[gd_scene load_steps=5 format=3 uid="uid://ddch1tmdhlspw"]

[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="1_wmk3u"]
[ext_resource type="Texture2D" uid="uid://1th7iw4rr010" path="res://UI/Splash Screen Beta.png" id="2_2mmpj"]
[ext_resource type="Theme" uid="uid://bgu3ycq7govpl" path="res://pause_menu_theme.tres" id="3_boh3i"]

[sub_resource type="CurveTexture" id="CurveTexture_n7blk"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmk3u")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("CurveTexture_n7blk")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_2mmpj")
expand_mode = 5

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_boh3i")
text = "INICIAR"

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_boh3i")
text = "CREDITOS"

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_boh3i")
text = "FECHAR"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
